more faction/creature race vocab

--- a/src/data/grammar/images/mtg-duel-decks.yaml
+++ b/src/data/grammar/images/mtg-duel-decks.yaml
@@ -29,13 +29,13 @@ _duelDecksNeutralLogo:
 
 _duelDecksStyleText:
   - "[_combatant1:#_duelDecksCombatant1.allCaps#][_combatant2:#_duelDecksCombatant2.allCaps#][_logoIndex:#_duelDecksLogo#]#_duelDecksLogoStyle#"
-  - "[_combatant1:#_duelDecksCombatant1.capitalizeAll#][_combatant2:#_duelDecksCombatant2.capitalizeAll#][_logoIndex:#_duelDecksLogo#]#_duelDecksLogoStyle#"
+  # - "[_combatant1:#_duelDecksCombatant1.capitalizeAll#][_combatant2:#_duelDecksCombatant2.capitalizeAll#][_logoIndex:#_duelDecksLogo#]#_duelDecksLogoStyle#"
 
 _duelDecksCombatants:
-# - "#_duelDecksCombatantsEntities#"
-# - "#_duelDecksCombatantsEntities#"
-# - "#_duelDecksCombatantsThings#"
-# - "#_duelDecksCombatantsThings#"
+- "#_duelDecksCombatantsEntities#"
+- "#_duelDecksCombatantsEntities#"
+- "#_duelDecksCombatantsThings#"
+- "#_duelDecksCombatantsThings#"
 - "#_duelDecksCardfinder#"
 
 _duelDecksCombatantsEntities:
@@ -43,24 +43,32 @@ _duelDecksCombatantsEntities:
   - "[_duelDecksCombatant2:#creatureTypes.s#][_duelDecksCombatant1:#creatureTypes.s#]"
   - "[_duelDecksCombatant2:#characterClass.s#][_duelDecksCombatant1:#characterClass.s#]"
   - "[_duelDecksCombatant2:#character#][_duelDecksCombatant1:#character#]"
-  - "[_duelDecksCombatant2:#person#][_duelDecksCombatant1:#planeswalkerFirstName#]"
+  - "[_duelDecksCombatant2:#character#,#person#][_duelDecksCombatant1:#planeswalkerFirstName#]"
+  - "[_duelDecksCombatant2:#characterRace#][_duelDecksCombatant1:#characterRace#]"
+  - "[_duelDecksCombatant2:#characterFaction#][_duelDecksCombatant1:#characterFaction#]"
 
 _duelDecksCombatantsThings:
   - "[_duelDecksCombatant2:#itemNoun.s#][_duelDecksCombatant1:#itemNoun.s#]"
   - "[_duelDecksCombatant2:#placeNoun.s#][_duelDecksCombatant1:#placeNoun.s#]"  
-  - "[_duelDecksCombatant2:#abstractNoun#][_duelDecksCombatant1:#abstractNoun#]"
-  - "[_duelDecksCombatant2:#emotion#][_duelDecksCombatant1:#emotion#]"
   - "[_duelDecksCombatant2:#verbGerund#][_duelDecksCombatant1:#verbGerund#]"
   - "[_duelDecksCombatant2:#adj#][_duelDecksCombatant1:#adj#]"
+  - "[_duelDecksCombatant2:#abstractNoun#][_duelDecksCombatant1:#abstractNoun#]"
+  - "[_duelDecksCombatant2:#massNoun#][_duelDecksCombatant1:#massNoun#]"  
+  - "[_duelDecksCombatant2:#emotion#][_duelDecksCombatant1:#emotion#]"  
   - "[_duelDecksCombatant2:#abstractNounMassNounOrEmotion#][_duelDecksCombatant1:#abstractNounMassNounOrEmotion#]"
+  - "[_duelDecksCombatant2:#bodypartsInPairs#][_duelDecksCombatant1:#bodypartsInPairs#]"  
 
 _duelDecksCardfinder:
-  # - >
-  #   [#cotdCardNameWordPair#][_duelDecksCombatant2:#_pairWord2#][_duelDecksCombatant1:#_pairWord1#]"
-  # - >
-  #   [#cotdLegendaryCreatureSearch#][_duelDecksCombatant2:#_cardFamiliarName1#][#cotdLegendaryCreatureSearch#][_duelDecksCombatant1:#_cardFamiliarName1#]"
+  - >
+    [#cotdCardNameWordPair#][_duelDecksCombatant2:#_pairWord2#][_duelDecksCombatant1:#_pairWord1#]"
+  - >
+    [#cotdLegendaryCreatureSearch#][_duelDecksCombatant2:#_cardFamiliarName1#][#cotdLegendaryCreatureSearch#][_duelDecksCombatant1:#_cardFamiliarName1#]"
   - >
     [_customQuery:name!="? "][#cotdCustomSearch#][_duelDecksCombatant2:#_cardName1#][_customQuery:name!="? "][#cotdCustomSearch#][_duelDecksCombatant1:#_cardName1#]
+
+_duelDecksFontStyle:
+  - >
+    font-size:72px; white-space: nowrap; font-family:Beleren; font-weight: bold; padding: 0;  line-height: 1.1em;
 
 _duelDecksLogoStyle: |
   <head>
@@ -68,7 +76,7 @@ _duelDecksLogoStyle: |
       td
         << text-align: center;>>
       td.title-text
-        << font-size:72px; white-space: nowrap; font-family:Beleren; font-weight: bold; padding: 0;  line-height: 1.1em;>>
+        << #_duelDecksFontStyle# >>
       span.combatant-one-text
         <<  padding: 0 0 20px 20px; >>       
       span.vs-text
@@ -120,6 +128,13 @@ _duelDecksLogoColorVeryLight:
 - OldLace
 - Snow
 
+_duelDecksLogoColorSemiTransparent:
+ - "rgba(240, 255, 255, 0.75)"
+ - "rgba(255, 248, 220, 0.75)"
+ - "rgba(240, 255, 240, 0.75)"
+ - "rgba(230, 230, 250, 0.75)"
+ - "rgba(250, 240, 230, 0.75)"
+
 _duelDecksLogoStyleEmbellished:
   - |
       [_logoColor1:#styleColorMedium#][_logoColor2:#styleColorMedium#,#styleColorDark#]
@@ -127,9 +142,27 @@ _duelDecksLogoStyleEmbellished:
         << background: -webkit-repeating-linear-gradient(#_logoColor1#, #_logoColor1# 50%, #_logoColor2# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; >>
 
   - |
+      [_logoColor1:#_duelDecksLogoColorVeryLight#][_logoColor2:#_duelDecksLogoColorMediumOrDark#]
+      td.title-text-embellished
+        << background: -webkit-repeating-linear-gradient(#_logoColor2#, #_logoColor2# 25%, #_logoColor1# 110%); -webkit-background-clip: text; -webkit-text-fill-color: #_duelDecksLogoColorSemiTransparent#; text-shadow: 2px 2px 0.075em #_logoColor2#; >>
+
+
+  - |
+      [_logoColor1:#_duelDecksLogoColorVeryLight#][_logoColor2:#_duelDecksLogoColorMediumOrDark#][_logoColor3:#_duelDecksLogoColorMediumOrDark#]
+      [_logoTransparentColor1:#_duelDecksLogoColorSemiTransparent#][_logoTransparentColor2:#_duelDecksLogoColorSemiTransparent#]
+      span.combatant-one-text-embellished
+        << background: -webkit-repeating-linear-gradient(#_logoColor2#, #_logoColor2# 25%, #_logoColor1# 100%); -webkit-background-clip: text; -webkit-text-fill-color: #_logoTransparentColor1#; text-shadow: 2px 2px 0.075em #_logoColor2#; >>
+      span.combatant-two-text-embellished      
+        << background: -webkit-repeating-linear-gradient(#_logoColor3#, #_logoColor3# 25%, #_logoColor3# 100%); -webkit-background-clip: text; -webkit-text-fill-color: #_logoTransparentColor2#; text-shadow: 2px 2px 0.075em #_logoColor3#; >>
+      span.vs-text-v      
+        << background: -webkit-repeating-linear-gradient(#_logoTransparentColor2#, #_logoTransparentColor2# 20%, #_logoTransparentColor1# 100%); -webkit-background-clip: text; -webkit-text-fill-color: #_logoTransparentColor1#; text-shadow: 1px 1px 0.075em #_logoColor2#; >>        
+      span.vs-text-embellished      
+        << background: -webkit-repeating-linear-gradient(#_logoTransparentColor1#, #_logoTransparentColor1# 20%, #_logoTransparentColor2# 100%); -webkit-background-clip: text; -webkit-text-fill-color: #_logoTransparentColor2#; text-shadow: 1px 1px 0.075em #_logoColor3#; >>        
+
+  - |
       [_logoColor1:#styleColorMedium#][_logoColor2:#styleColorMedium#,#styleColorDark#]
       td.title-text-embellished
-        << background: -webkit-repeating-linear-gradient(#_logoColor1#, #_logoColor1# 50%, #_logoColor2# 110%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_duelDecksDarkNeutral#;">>
+        << background: -webkit-repeating-linear-gradient(#_logoColor1#, #_logoColor1# 50%, #_logoColor2# 110%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_baseColor#;">>
 
   - |
       [_logoIndex:#_duelDecksNeutralLogo#][_logoColorTop1:#_duelDecksLogoColorMediumOrDark#][_logoColorTop2:#_duelDecksLogoColorMediumOrDark#]
@@ -143,15 +176,19 @@ _duelDecksLogoStyleEmbellished:
 
   - |
       [_logoColor:#_duelDecksLogoColorVeryLight#][_logoColorOutline:#_baseColor#]
+      [_logoColor1:#_duelDecksLogoColorMediumOrDark#][_logoColor2:#_duelDecksLogoColorMediumOrDark#]
       td.title-text-embellished
         << >>
       span.combatant-one-text-embellished
-        << background: -webkit-repeating-linear-gradient(#_duelDecksLogoColorMediumOrDark#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; -webkit-text-stroke-width:2px; -webkit-text-stroke-color: #_logoColorOutline#; >>
+        << background: -webkit-repeating-linear-gradient(#_logoColor1#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_logoColorOutline#; >>
       span.combatant-two-text-embellished      
-        << background: -webkit-repeating-linear-gradient(#_duelDecksLogoColorMediumOrDark#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:2px; -webkit-text-stroke-color: #_logoColorOutline#;>>
-      span.vs-text-embellished
-        [_vsTextColor1:#_baseColor#]<< background: -webkit-repeating-linear-gradient(#_vsTextColor1#, #_vsTextColor1# 45%, snow 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; -webkit-filter: brightness(75%);>>
-
+        << background: -webkit-repeating-linear-gradient(#_logoColor2#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_logoColorOutline#;>>
+      span.vs-text-v
+        << background: -webkit-repeating-linear-gradient(#_logoColor1#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_logoColorOutline#; >>
+      span.vs-text-s
+        << background: -webkit-repeating-linear-gradient(#_logoColor2#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_logoColorOutline#;>>
+      span.vs-text-dot
+        << background: -webkit-repeating-linear-gradient(#_logoColor2#, #_logoColor# 60%, #_logoColor# 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;  -webkit-text-stroke-width:1px; -webkit-text-stroke-color: #_logoColorOutline#;>>
 
 _duelDecksLogoHtml: |
   <table cellspacing="0" cellpadding="0" min-width="2000">
@@ -159,6 +196,6 @@ _duelDecksLogoHtml: |
       <td class="logo-row" colspan="3" cellspacing="0"><img src="#_duelDecksImageDirectory#/mtg-duel-decks-logo-#_logoIndex#.png"></td>
     </tr>
     <tr>    
-      <td class="title-text title-text-embellished"><span class="combatant-one-text combatant-one-text-embellished">#_combatant1#</span></td><td style="vertical-align:middle;" class="title-text title-text-embellished"><span class="vs-text vs-text-embellished">&nbsp;<span class="vs-text-v">v</span><span class="vs-text-s">s</span>.&nbsp;</span></td><td class="title-text title-text-embellished"><span class="combatant-two-text combatant-two-text-embellished">#_combatant2#</span></td>
+      <td class="title-text title-text-embellished"><span class="combatant-one-text combatant-one-text-embellished">#_combatant1#</span></td><td style="vertical-align:middle;" class="title-text title-text-embellished"><span class="vs-text vs-text-embellished">&nbsp;<span class="vs-text-v">v</span><span class="vs-text-s">s</span><span class="vs-text-dot">.</span>&nbsp;</span></td><td class="title-text title-text-embellished"><span class="combatant-two-text combatant-two-text-embellished">#_combatant2#</span></td>
     </tr>
   </table>
