--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -203,26 +203,90 @@
   	"anaba",
   	"anurid",
   	"aven",
+    "boggart",
+    "duergar",
+    "felidar",
   	"kami",
+    "kathari",
+    "kitsune",
+    "khenra",
   	"leonin",
+    "leotau",
+    "loxodon",
   	"merrow",
-  	"nezumi"
+    "nacatl",
+    "nantuko",
+  	"nezumi",
+    "nim",
+    "nishoba",
+    "noggle",
+    "orochi",
+    "rakshasa",
+    "root-kin",
+    "soltari",
+    "soratami",
+    "viashino",
+    "viridian"
   ],
   "characterFaction": [
+    "#amonkhetCrop#-Crop",
+    "Abuna",
   	"Abzan",
+    "Ana",
+    "Atarka",
+    "Auriok",
+    "Azorious",
   	"Avacynian",
+    "Blood-Chin",
+    "Boros",
   	"Cabal",
+    "Ceta",
   	"D'Avenant",
+    "Dega",
+    "Dimir",
+    "Dromoka",
   	"Ebon Hand",
+    "en-Kor",
+    "Esper",
+    "Ghor-Clan",
+    "Golgari",
+    "Gruul",
+    "il-Kor",
+    "Izzet",
   	"Jeskai",
+    "Kalastria",
+    "Kolaghan",
+    "Krark-Clan",
   	"Mardu",
+    "Moriok",
+    "Necra",
+    "Neurok",
+    "Ojutai",
+    "Orzhov",
+    "Pheres-Band",
   	"Mirran",
+    "Raka",
+    "Rakdos",
   	"Samite",
+    "Selesnya",
+    "Silumgar",
+    "Simic",
   	"Stinkdrinker",
   	"Sultai",
+    "Sylvok",
   	"Temur",
+    "Vulshok",
   	"Wojek"
   ],
+
+  "amonkhetCrop": [
+    "Ahn",
+    "Esh",
+    "Nef",
+    "Rhet",
+    "Tah"
+  ],
+
   "characterFactionOrRace": [
   	"#characterRace#",
   	"#characterFaction#"
