--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -26,6 +26,7 @@
       "Krosa",
       "Kuldotha",
       "Llanowar",
+      "Malakir",
       "Mephidross",
       "Mwonvuli",
       "Naar Isle",
@@ -121,6 +122,7 @@
       "Krosan",
       "Kuldotha",
       "Llanowar",
+      "Malakir",
       "Mercadian",
       "Mephidross",
       "Mwonvuli",
