enable duel decks headlines

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -103,6 +103,7 @@ textAnnouncement:
 graphicAnnouncement:
 - "#fromTheVaultGraphicAnnouncement#"
 - "#novelSetGraphicAnnouncement#"
+- "#duelDecksGraphicAnnouncement#"
 
 fromTheVaultGraphicAnnouncement:
 - "Wizards Announces: From the Vault: [_vaultContents:#_fromTheVaultVaultContents#]#_vaultContents.capitalize# {htmlImg htmlImgString=`#fromTheVaultLogoImage#`}"
