balance duel deck name templates

--- a/src/data/grammar/images/mtg-duel-decks.yaml
+++ b/src/data/grammar/images/mtg-duel-decks.yaml
@@ -36,10 +36,11 @@ _duelDecksCombatants:
 - "#_duelDecksCombatantsEntities#"
 - "#_duelDecksCombatantsThings#"
 - "#_duelDecksCombatantsThings#"
+- "#_duelDecksCombatantsThings#"
 - "#_duelDecksCardfinder#"
 
 _duelDecksCombatantsEntities:
-  - "[_personality:#planeswalkerFirstName#][_duelDecksCombatant2:#alternativePersonality#,#planeswalkerFirstName#][_duelDecksCombatant1:#_personality#]"
+  - "[_personality:#planeswalkerFirstName#][_duelDecksCombatant2:#alternativePersonality#,#planeswalkerFirstName#,#_duelDecksCombatantAnything#][_duelDecksCombatant1:#_personality#]"
   - "[_duelDecksCombatant2:#creatureTypes.s#][_duelDecksCombatant1:#creatureTypes.s#]"
   - "[_duelDecksCombatant2:#characterClass.s#][_duelDecksCombatant1:#characterClass.s#]"
   - "[_duelDecksCombatant2:#character#][_duelDecksCombatant1:#character#]"
@@ -56,7 +57,21 @@ _duelDecksCombatantsThings:
   - "[_duelDecksCombatant2:#massNoun#][_duelDecksCombatant1:#massNoun#]"  
   - "[_duelDecksCombatant2:#emotion#][_duelDecksCombatant1:#emotion#]"  
   - "[_duelDecksCombatant2:#abstractNounMassNounOrEmotion#][_duelDecksCombatant1:#abstractNounMassNounOrEmotion#]"
-  - "[_duelDecksCombatant2:#bodypartsInPairs#][_duelDecksCombatant1:#bodypartsInPairs#]"  
+  - "[_duelDecksCombatant2:#bodypartsInPairs#][_duelDecksCombatant1:#bodypartsInPairs#]"
+  - "[_duelDecksCombatant2:#gameConcept#][_duelDecksCombatant1:#gameConcept#]"
+  - "[_duelDecksCombatant2:#_duelDecksCombatantAnything#][_duelDecksCombatant1:#_duelDecksCombatantAnything#]"
+
+_duelDecksCombatantAnything:
+- "#abstractNounMassNounOrEmotion#"
+- "#pluralNoun#"
+- "#character#"
+- "#characterRace#"
+- "#characterFaction#"
+- "#creatureTypes.s#"
+- "#characterClass.s#"
+- "#planeswalkerFirstName#"
+- "#gameConcept#"
+- "#verbGerund#"
 
 _duelDecksCardfinder:
   - >
