a few more bits

--- a/src/data/grammar/vocab/nouns/nouns.yaml
+++ b/src/data/grammar/vocab/nouns/nouns.yaml
@@ -48,7 +48,7 @@
       "anticipation", "discomfort",  "disgust", "envy", "confusion", "giddiness", "fear", "consternation", "squeamishness", "hatred",
       "panic", "glee", "rage", "insecurity", "self-consciousness", "abject terror", "cautious optimism", "boredom", "cowardice", "sorrow",
       "lust", "near-fanatical devotion", "arrogance", "pluckiness", "indifference", "unwillingness", "begrudging admiration", "fury",
-      "loneliness", "angst", "mistrust", "shame", "loyalty","memory", "duty", "regret", "respect"
+      "loneliness", "angst", "mistrust", "shame", "loyalty","memory", "duty", "regret", "respect", "animosity"
   ],
   "itemNoun": [
       "weapon", "card", "wand", "spellbook", "staff", "orb", "tree", "plant", "crown", "jewel", "amulet", "egg", "banner", "boot",
