--- a/src/data/grammar/vocab/notable-pairs.yaml
+++ b/src/data/grammar/vocab/notable-pairs.yaml
@@ -111,3 +111,4 @@ notablePairs:
 - "[pairPart1:Mods][pairPart2:Rockers]"
 - "[pairPart1:Falcon][pairPart2:Snowman]"
 - "[pairPart1:Kicking][pairPart2:Screaming]"
+- "[pairPart1:Harold][pairPart2:Kumar]"
