--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -29,7 +29,7 @@ cotdDescription:
   - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword.lowercase# coming back, we can't promise that [_promise:any keyword is really off limits from now on,we're not going to put this ability on #rarity.a# in the next set,that we have any idea what we're doing,it still actually works within the rules]#_promise#."
   - "When your opponent plays #kindaGood.a# spell, your first [_cardlinkName:#cardWhichDrawsCards#]#_cotdHtmlCardLink# is probably to try to cause them to have a [_cardlinkName:#cardWhichCountersSpells#]#_cotdHtmlCardLink#."
   - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
-  - "Every player aspires to have as many [_cardlinkName:#_cardname.s#]#_cotdHtmlCardLink# as they have #colors# #deckArchOrCategory# decks."
+  - "Every player aspires to have as many [_cardlinkName:#_cardname.s#]#_cotdHtmlCardLink# as they have #mtgColors# #deckArchOrCategory# decks."
   - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this card, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
 
 cotdTextDescription:
@@ -215,7 +215,7 @@ marginalThingToDo:
   - "continue [_acting:drawing cards,gaining life,playing lands,talking,shuffling,blocking,searching your library]#_acting# after losing the game"
   - reduce the casting cost of red enchantments by 1 generic mana
   - "delay combo kills by precisely #count# turns"
-  - "destroy #cardCategory.s# in #colors#"
+  - "destroy #cardCategory.s# in #mtgColors#"
   - peek at the top card of your library
 
 surprisingResult:
