--- a/src/data/grammar/mtg/cards/mtg-cards.yaml
+++ b/src/data/grammar/mtg/cards/mtg-cards.yaml
@@ -831,7 +831,6 @@
       "#realCard# (Not the #novelCardSetName.capitalizeAll# One)",
       "Snow-Covered #realCard#",
       "#bodypart.capitalize# in a Jar",
-      "Circle of Protection: [_someNoun:#abstractNoun#,#emotion#,#massNoun#,#pluralNoun#,#things2#][_what:#creatureTypes.s#,#cardCategory.s#,#_someNoun#]#_what.capitalizeAll#"
+      "Circle of Protection: [_someNoun:#abstractNoun#,#emotion#,#massNoun#,#pluralNoun#][_what:#creatureTypes.s#,#cardCategory.s#,#_someNoun#]#_what.capitalizeAll#"
   ]
-
 }
