--- a/src/data/grammar/images/mtg-in-graphics.yaml
+++ b/src/data/grammar/images/mtg-in-graphics.yaml
@@ -63,7 +63,7 @@ inGraphicsStep:
 - 'Play Three-Card Monte with #_card1#, #_card2#, and a morphed #cardAlone#'
 - 'Toss #_card2# into the air and shrug'
 - 'Explain to your opponent that #_card1# is strictly better than #card#'
-- 'Reveal #hiddenAgenda# naming #_card2#'
+- 'Reveal #hiddenAgendaCard# naming #_card2#'
 - 'Offer to sell #_card1# to your opponent for #priceUSD#'
 inGraphicsCardMask: "./data/images/cardmask-double.png"
 inGraphicsBacksplash:
